--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=consulta-credito
+spring.application.name=credit-query
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/consulta_credito
+spring.datasource.url=jdbc:postgresql://localhost:5432/credit_query
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
